--- a/week 2-2-Using state in Jetpack Compose/start/build.gradle
+++ b/week 2-2-Using state in Jetpack Compose/start/build.gradle
@@ -55,9 +55,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation "androidx.activity:activity-compose:$activity_compose_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$viewmodel_compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$viewmodel_compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewmodel_compose_version"
 
     implementation "androidx.compose.animation:animation:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
